added SEO to three-four.html

--- a/three-four.html
+++ b/three-four.html
@@ -27,28 +27,32 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>3-4 year photos</title>
+    <title>Zoey's 3-4 year photos</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-sm-block"
+            alt="SheCodes logo"
+          />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="SheCodes small logo"
           />
         </a>
         <ul>
           <li>
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Samantha"> About</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Samantha"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -62,14 +66,14 @@
         <div class="col-sm-5">
           <img
             src="images/three1.jpeg"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-sm-5">
           <img
             src="images/three2.JPG"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
@@ -80,14 +84,14 @@
         <div class="col-sm-5">
           <img
             src="images/three3.JPG"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-sm-5">
           <img
             src="images/three4.JPG"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
@@ -98,14 +102,14 @@
         <div class="col-sm-5">
           <img
             src="images/three5.JPG"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-sm-5">
           <img
             src="images/three6.JPG"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
@@ -116,14 +120,14 @@
         <div class="col-sm-5">
           <img
             src="images/four1.jpg"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-sm-5">
           <img
             src="images/four2.jpg"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
@@ -134,14 +138,14 @@
         <div class="col-sm-5">
           <img
             src="images/four3.jpg"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-sm-5">
           <img
             src="images/four4.jpg"
-            alt=""
+            alt="Random photos of Zoey ages 3-4 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
@@ -151,27 +155,39 @@
         <div class="col-md-12">
           <img
             src="images/four5.JPG"
-            alt=""
+            alt="Photo of Logan and Zoey"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
       </div>
       <div class="homepage-button">
-        <a href="/index.html" class="btn btn-branding shadow mt-5"
+        <a
+          href="/index.html"
+          class="btn btn-branding shadow mt-5"
+          title="Homepage"
           >Back to homepage</a
         >
       </div>
       <footer>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:svolesky317@gmail.com" class="email-link"
+          <a
+            href="mailto:svolesky317@gmail.com"
+            class="email-link"
+            title="Samantha's Email link"
             >svolesky317@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://instagram.com/sjvolesky" target="_blank"
+          <a
+            href="https://instagram.com/sjvolesky"
+            target="_blank"
+            title="Samantha's instagram link"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.github.com/sjvolesky" target="_blank"
+          <a
+            href="https://www.github.com/sjvolesky"
+            target="_blank"
+            title="Samantha's GitHub link"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
