added responsive to the images in the html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               the simple pleasures of life.
             </p>
 
-            <a href="/three-four.html" class="btn btn-branding shadow"
+            <a href="three-four.html" class="btn btn-branding shadow"
               >View more photos</a
             >
           </div>
