--- a/newborn.html
+++ b/newborn.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-<meta name="description" content="This page has random pictures of Zoey during the first year of her life.">
+
     <title>Newborn photos of Zoey</title>
   </head>
   <body>
@@ -58,7 +58,7 @@
       <div class="newborn">
         <h1 class="text-center mt-5 mb-5">Newborn photos of Zoey</h1>
           <div class="row">
-            <div class="col-sm-1"></div>
+            <div class="col-sm-1 d-none d-lg-block"></div>
             <div class="col-md-5">
               <img
                 src="images/newborn1.jpg"
@@ -73,11 +73,11 @@
                 class="img-fluid rounded mt-5 border p-2 shadow"
               />
             </div>
-            <div class="col-sm-1"></div>
+            <div class="col-sm-1 d-none d-lg-block"></div>
           </div>
        </div>
         <div class="row">
-            <div class="col-sm-1"></div>
+            <div class="col-sm-1 d-none d-lg-block"></div>
           <div class="col-md-5">
             <img
               src="images/newborn3.jpg"
@@ -92,10 +92,10 @@
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-1"></div>
+          <div class="col-sm-1 d-none d-lg-block"></div>
         </div>
         <div class="row">
-            <div class="col-sm-1"></div>
+            <div class="col-sm-1 d-none d-lg-block"></div>
           <div class="col-md-5">
             <img
               src="images/newborn5.jpg"
@@ -110,10 +110,10 @@
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-1"></div>
+          <div class="col-sm-1 d-none d-lg-block"></div>
         </div>
         <div class="row">
-            <div class="col-sm-1"></div>
+            <div class="col-sm-1 d-none d-lg-block"></div>
           <div class="col-md-5">
             <img
               src="images/newborn6.jpg"
@@ -128,10 +128,10 @@
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-1"></div>
+          <div class="col-sm-1 d-none d-lg-block"></div>
         </div>
         <div class="row">
-            <div class="col-sm-1"></div>
+            <div class="col-sm-1 d-none d-lg-block"></div>
           <div class="col-sm-5">
             <img
               src="images/newborn7.jpeg"
@@ -146,7 +146,7 @@
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-1"></div>
+          <div class="col-sm-1 d-none d-lg-block"></div>
         </div>
       </div>
       <div class="homepage-button">
