--- a/one-two.html
+++ b/one-two.html
@@ -62,7 +62,7 @@
         <h1 class="text-center mt-4">Age 1-2 photos of Zoey</h1>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-sm-5">
           <img
             src="images/one1.jpg"
@@ -77,10 +77,10 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-md-5">
           <img
             src="images/one3.JPG"
@@ -95,11 +95,11 @@
             class="img-fluid mt-5 p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
 
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-md-5">
           <img
             src="images/two1.jpg"
@@ -114,10 +114,10 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-md-5">
           <img
             src="images/two3.jpg"
@@ -132,7 +132,7 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="homepage-button">
         <a
