--- a/three-four.html
+++ b/three-four.html
@@ -62,7 +62,7 @@
         <h1 class="text-center mb-4">Age 3-4 photos of Zoey</h1>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-sm-5">
           <img
             src="images/three1.jpeg"
@@ -77,10 +77,10 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-sm-5">
           <img
             src="images/three3.JPG"
@@ -95,10 +95,10 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-sm-5">
           <img
             src="images/three5.JPG"
@@ -113,10 +113,10 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-sm-5">
           <img
             src="images/four1.jpg"
@@ -131,10 +131,10 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="row">
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
         <div class="col-sm-5">
           <img
             src="images/four3.jpg"
@@ -149,10 +149,10 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1 d-none d-lg-block"></div>
       </div>
       <div class="row single">
-        <div class="col-md-12">
+        <div class="col-md-12 d-none d-lg-block">
           <img
             src="images/four5.JPG"
             alt="Photo of Logan and Zoey"
