--- a/newborn.html
+++ b/newborn.html
@@ -121,7 +121,7 @@
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-5">
+          <div class="col-md-5">
             <img
               src="images/newborn9.jpg"
               alt="Newborn photo of Zoey 0 months to 12 months"
