--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
+
     <meta
       name="description"
       content="Samantha is a front-end developer based in the United States. Samantha learned front-end development through the SheCodes bootcamp."
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
     />
     <title>Front-end developer - Samantha Volesky</title>
   </head>
@@ -91,7 +92,7 @@
               brought a sense of novelty and joy to the family lineage.
             </p>
 
-            <a href="newborn.html" class="btn btn-branding shadow"
+            <a href="/newborn.html" class="btn btn-branding shadow"
               >View more photos</a
             >
           </div>
@@ -109,7 +110,7 @@
               and curiosity about the world around her.
             </p>
 
-            <a href="one-two.html" class="btn btn-branding shadow"
+            <a href="/one-two.html" class="btn btn-branding shadow"
               >View more photos</a
             >
           </div>
@@ -151,7 +152,7 @@
               the simple pleasures of life.
             </p>
 
-            <a href="three-four.html" class="btn btn-branding shadow"
+            <a href="/three-four.html" class="btn btn-branding shadow"
               >View more photos</a
             >
           </div>
