--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         </ul>
       </nav>
     </div>
-    <div class="about-section container">
+    <div class="about-section container mt-1">
       <div class="row">
         <div class="col-md-6">
           <div class="about-section-content">
