--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="row">
         <div class="col text-2">
           <div class="newborn-description">
-            <h2 class="mb-5">Zoey age 1-2</h2>
+            <h2 class="mb-5 mt-5">Zoey age 1-2</h2>
             <p class="mb-4 text-muted">
               From a very young age, Zoey's happy place was undoubtedly anywhere
               in nature, where she could explore, play, and immerse herself in
@@ -133,7 +133,7 @@
         </div>
         <div class="col text-3">
           <div class="newborn-description">
-            <h2 class="mb-5">Zoey age 3-4</h2>
+            <h2 class="mb-5 mt-5">Zoey age 3-4</h2>
             <p class="mb-4 text-muted">
               As Zoey Richalyn grew older, her love for the outdoors continued
               to flourish, but she also developed new interests that enriched
